manifests/namespace.yaml
# four namespaces

apiVersion: v1
kind: Namespace
metadata:
  name: platform
  labels:
    team: mle-platform
    part-of: k8s-for-mle-part-2
    tier: platform

---
apiVersion: v1
kind: Namespace
metadata:
  name: client-a
  labels:
    team: mle-platform
    part-of: k8s-for-mle-part-2
    tier: tenant
    platform-access: "true"

---
apiVersion: v1
kind: Namespace
metadata:
  name: client-b
  labels:
    team: mle-platform
    part-of: k8s-for-mle-part-2
    tier: tenant
    
---
apiVersion: v1
kind: Namespace
metadata:
  name: observer
  labels:
    team: mle-platform
    part-of: k8s-for-mle-part-2
    tier: observer
